<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/enter_amount_to_convert"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_amount" />

    <TextView
        android:id="@+id/convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/convert_from"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/convert_from"
        app:layout_constraintTop_toBottomOf="@id/convert_from">

        <RadioButton
            android:id="@+id/cups_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cups"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/tsp_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teaspoons"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/tbs_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tablespoons" />

        <RadioButton
            android:id="@+id/qt_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/quarts"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/pt_from"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pints"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <RadioButton
            android:id="@+id/oz_from"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/ounces"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="8dp"
        android:text="@string/convert_to"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/convert_from" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/convert_to"
        app:layout_constraintTop_toBottomOf="@+id/convert_to">

        <RadioButton
            android:id="@+id/cups_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cups" />

        <RadioButton
            android:id="@+id/tsp_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teaspoons" />

        <RadioButton
            android:id="@+id/tbs_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tablespoons" />

        <RadioButton
            android:id="@+id/qt_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/quarts" />

        <RadioButton
            android:id="@+id/pt_to"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/pints" />

        <RadioButton
            android:id="@+id/oz_to"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/ounces" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/conversion_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/conversion_result_0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>